--- a/style.css
+++ b/style.css
@@ -8,7 +8,8 @@ body {
 }
 
 .header-logo {
-
+    font-size: 24px;
+    color: #f9faf8;
 }
 
 .header ul {
@@ -18,5 +19,6 @@ body {
 .header a {
     text-decoration: none;
     color: #e5e7eb;
+    font-size: 18px;
 }
 /* files related to header (end)*/
