--- a/style.css
+++ b/style.css
@@ -9,25 +9,27 @@ body {
     background-color: #1f2937;
     flex-direction: column;
     padding: 1em 10em 5em 10em;
+    align-items: stretch;
 }
 
 .header {
     display: flex;
     align-items: center;
+    justify-content: space-between;
 }
 
 .header-logo {
     font-size: 24px;
     color: #f9faf8;
-    flex: 1;
+    padding-right: 1em;
 }
 
 .header ul {
     display: flex;
     list-style: none;
     gap: 10px;
+    padding: 0;
     justify-content: flex-end;
-    justify-content: center;
 }
 
 .header a {
