--- a/style.css
+++ b/style.css
@@ -104,11 +104,16 @@ body {
 .info-body {
     display: flex;
     gap: 2em;
+    flex-wrap: wrap;
+
 }
 
 .info-body div {
     display: flex;
     flex-direction: column;
+    align-items: center;
+    gap: 10px;
+    flex: 1 1 auto;
 }
 
 .info-body img {
@@ -119,7 +124,10 @@ body {
 }
 
 .info-text {
-    
+    color: #e5e7eb;
+    font-size: 18px;
+    width: 150px;
+    text-align: center;
 }
 /* files related to info (end) */
 
