--- a/style.css
+++ b/style.css
@@ -135,8 +135,11 @@ body {
 
 .quote-part {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
+    padding: 1em 15em 2em 15em;
+    background-color: #e5e7eb;
 }
 
 .quote {
@@ -144,7 +147,7 @@ body {
 }
 
 .author {
-    
+
 }
 /* files related to quote (end) */
 
