--- a/style.css
+++ b/style.css
@@ -143,11 +143,14 @@ body {
 }
 
 .quote {
-
+    font-size: 36px;
+    font-weight: 100;
+    color: #1f2937;
 }
 
 .author {
-
+    align-self: flex-end;
+    font-weight: bold;
 }
 /* files related to quote (end) */
 
