--- a/style.css
+++ b/style.css
@@ -83,6 +83,7 @@ body {
     padding: 5px 1em;
     display: flex;
     justify-content: flex-start;
+    align-items: center;
 }
 /* files related to header (end)*/
 
@@ -157,14 +158,16 @@ body {
 /* files related to call to action (start)*/
 .call-to-action {
     margin: 3em 13em 3em 13em;
-    padding: 2em 3em;
+    padding: 2em 5em;
     background-color: #3882f6;
     border-radius: 5px;
     display: flex;
 }
 
 .action-text {
-
+    flex: 1;
+    display: flex;
+    flex-direction: column;
 }
 
 .call-to-action .action-button {
